# mlcon2024

./: README.md  demo.xircuits  requirements.txt
xai_components/xai_agent/: LICENSE  README.md  agent_components.py  agent_example.xircuits  new_component.py  pyproject.toml  requirements.txt
xai_components/xai_converse/: LICENSE  README.md  converse_components.py  pyproject.toml  requirements.txt
xai_components/xai_converse/examples/: example.xircuits
xai_components/xai_converse/public/: index.html
xai_components/xai_converse/public/technologic/: index.html
xai_components/xai_converse/public/technologic/_app/: version.json
xai_components/xai_converse/public/technologic/_app/immutable/assets/: 0.e5edeb29.css  _layout.064b3e9f.css  _page.cfbf5938.css
xai_components/xai_converse/public/technologic/_app/immutable/chunks/: Icon.93dbfe36.js  IconEdit.b5252654.js  IconMessageChatbot.0bc4107e.js  IconServer.773a698f.js  IconTrashX.d818d77f.js  SvelteMarkdown.0c121af3.js  dialogs.cd7ae541.js  index.31815045.js  index.6e58b9bb.js  navigation.451659a4.js  singletons.a89d3194.js  stores.0f2f131c.js  stores.238eac94.js  technologicStores.3ea6c695.js
xai_components/xai_converse/public/technologic/_app/immutable/entry/: app.a81b1e83.js  start.83b3306f.js
xai_components/xai_converse/public/technologic/_app/immutable/nodes/: 0.f3d6e26c.js  1.79777842.js  2.b8a93419.js  3.5fb29ec0.js  4.f65ba026.js  5.2c087d11.js  6.d5c30df0.js
xai_components/xai_google_calendar/: README.md  new_component.py  requirements.txt
xai_components/xai_google_maps/: README.md  __init__.py  (+1 more)
(+2 files in other folders)
